# SPONGE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Windows.yml
SPONGE/: CMakeLists.txt  FEP.cu  FEP.cuh  Makefile  Makefile_CUDA≤10.0  TI.cu  TI.cuh  common.cu  common.cuh  control.cu  control.cuh  main.cu  main.cuh  main_fep.cu  main_fep.cuh  main_nopbc.cu  main_nopbc.cuh  main_ti.cu  main_ti.cuh  mdin.txt  simple_auto_diff.cuh  vs_project_generator.bat
SPONGE/Berendsen_barostat/: Berendsen_barostat.cu  Berendsen_barostat.cuh
SPONGE/FEP_core/: CMakeLists.txt  FEP_core.cu  FEP_core.cuh
SPONGE/Langevin_MD/: Langevin_MD.cu  Langevin_MD.cuh  LiuJian_MD.cuh
SPONGE/Lennard_Jones_force/: CMakeLists.txt  LJ_soft_core.cu  LJ_soft_core.cuh  Lennard_Jones_force.cu  Lennard_Jones_force.cuh
SPONGE/MC_barostat/: MC_barostat.cu  MC_barostat.cuh
SPONGE/MD_core/: CMakeLists.txt  FEP_core.cu  FEP_core.cuh  MD_core.cu  MD_core.cuh  TI_core.cu  TI_core.cuh
SPONGE/No_PBC/: CMakeLists.txt  Coulomb_Force_No_PBC.cu  Coulomb_Force_No_PBC.cuh  Lennard_Jones_force_No_PBC.cu  Lennard_Jones_force_No_PBC.cuh  generalized_Born.cu  generalized_Born.cuh
SPONGE/PME_force/: CMakeLists.txt  PME_force.cu  PME_force.cuh
SPONGE/TI_core/: CMakeLists.txt  TI_core.cu  TI_core.cuh
SPONGE/angle/: CMakeLists.txt  Urey_Bradley_force.cu  Urey_Bradley_force.cuh  angle.cu  angle.cuh
SPONGE/barostats/: Berendsen_barostat.cu  Berendsen_barostat.cuh  CMakeLists.txt  MC_barostat.cu  MC_barostat.cuh  andersen_barostat.cu  andersen_barostat.cuh
SPONGE/bond/: CMakeLists.txt  bond.cu  bond.cuh  bond_soft.cu  bond_soft.cuh
SPONGE/cmap/: CMakeLists.txt  cmap.cu  cmap.cuh
SPONGE/constrain/: CMakeLists.txt  SETTLE.cu  SETTLE.cuh  SHAKE.cu  SHAKE.cuh  constrain.cu  constrain.cuh  simple_constrain.cu  simple_constrain.cuh
SPONGE/covid-tip4p/: covid-tip4p_angle.txt  covid-tip4p_bond.txt  covid-tip4p_charge.txt  covid-tip4p_coordinate.txt  covid-tip4p_dihedral.txt  covid-tip4p_exclude.txt  covid-tip4p_lj.txt  covid-tip4p_mass.txt  covid-tip4p_nb14.txt  covid-tip4p_residue.txt  covid-tip4p_vatom.txt  min2_coordinate.txt  min3_coordinate.txt  min_coordinate.txt  npt_coordinate.txt  npt_velocity.txt
SPONGE/crd_molecular_map/: CMakeLists.txt  crd_molecular_map.cu  crd_molecular_map.cuh
SPONGE/dihedral/: CMakeLists.txt  dihedral.cu  dihedral.cuh  improper_dihedral.cu  improper_dihedral.cuh
SPONGE/nb14/: CMakeLists.txt  nb14.cu  nb14.cuh
SPONGE/neighbor_list/: CMakeLists.txt  neighbor_list.cu  neighbor_list.cuh
SPONGE/restrain/: CMakeLists.txt  restrain.cu  restrain.cuh
SPONGE/simple_constrain/: simple_constrain.cu  simple_constrain.cuh
SPONGE/thermostats/: Andersen_thermostat.cu  Andersen_thermostat.cuh  Berendsen_thermostat.cu  Berendsen_thermostat.cuh  CMakeLists.txt  Langevin_MD.cu  Langevin_MD.cuh  Middle_Langevin_MD.cu  Middle_Langevin_MD.cuh  nose_hoover_chain.cu  nose_hoover_chain.cuh
SPONGE/tip4p_2880_system/: Ih_charge.txt  Ih_constrain.txt  Ih_coordinate.txt  Ih_velocity.txt
SPONGE/virtual_atoms/: CMakeLists.txt  virtual_atoms.cu  virtual_atoms.cuh
module_standby/FGM/: FGM_common.cu  FGM_common.cuh  solving_poisson_equation.cu  solving_poisson_equation.cuh
module_standby/SITS/: SITS_MD_force.cu  SITS_MD_force.cuh  SITS_common.cu  SITS_common.cuh  SITS_main.cu  SITS_neighbor_list.cu  SITS_neighbor_list.cuh
src/: Makefile  SPONGE.sln  SPONGE.vcxproj  SPONGE.vcxproj.filters  common.cu  common.cuh  control.cu  control.cuh  main.cu  main.cuh  mdin  sponge_builder.py
src/Berendsen_barostat/: Berendsen_baro.smf  Berendsen_barostat.cuh
src/Langevin_MD/: Langevin.smf  Langevin_MD.cuh  LiuJian_MD.cu  LiuJian_MD.cuh  Liujian.smf
src/Lennard_Jones_force/: LJ.smf  LJ_DirectPME.smf  LJ_DirectPME_SITS.smf  Lennard_Jones_force.cu  Lennard_Jones_force.cuh
src/MC_barostat/: MC_barostat.cu  MC_barostat.cuh  mc_baro.smf
src/MD_core/: MD_core.cu  MD_core.cuh  common.smf  control.smf  md_core.smf
src/PME_force/: PME.smf  PME_force.cu  PME_force.cuh
src/angle/: angle.cu  angle.cuh  angle.smf
src/bond/: bond.cu  bond.cuh  bond.smf
src/crd_molecular_map/: crd_molecular_map.cuh
src/dihedral/: dihedral.cu  dihedral.cuh  dihedral.smf
src/helper_sponge_builder/: base.py  funcs.py  gui_main.py  html.py
src/nb14/: nb14.cu  nb14.cuh  nb14.smf
src/neighbor_list/: neighbor_list.cu  neighbor_list.cuh  neighbor_list.smf
src/pyplugin/: pyplugin.cu  pyplugin.cuh  pyplugin.smf
src/restrain/: restrain.cuh  restrain.smf
src/simple_constrain/: simple_constrain.cu  simple_constrain.cuh  simple_constrain.smf
src/virtual_atoms/: virtual_atoms.cu  virtual_atoms.cuh  virtual_atoms.smf
test_system/qm_test/: run.sh  start_position.txt
test_system/qm_test/infiles/: bond_in_file.txt  charge_in_file.txt  exclude_in_file.txt  label_in_file.txt  lj_in_file.txt  mass_in_file.txt  mdin  water.parm7  water.rst7
test_system/tip4p_2880_gromacs/: sponge.in
test_system/tip4p_2880_gromacs/infiles/: Ih_bond.txt  Ih_charge.txt  Ih_exclude.txt  Ih_lj.txt  Ih_mass.txt  Ih_residue.txt  Ih_vatom.txt  ref_mask.txt
test_system/tip4p_7000_amber/: sponge.in
test_system/tip4p_7000_amber/infiles/: start.rst7  start2.rst7  (+10 more)
test_system/water/: frc_water.txt  mdin  water.parm7  water.rst7  water_bond.txt  water_charge.txt  water_constrain.txt  water_coordinate.txt  water_exclude.txt  water_lj.txt  water_mass.txt  water_residue.txt  water_velocity.txt
test_system/water_ala/: 4.rst7  ala_wat_mod.parm7  frc_ala.txt  water_ala_angle.txt  water_ala_bond.txt  water_ala_charge.txt  water_ala_coordinate.txt  water_ala_dihedral.txt  water_ala_exclude.txt  water_ala_lj.txt  water_ala_mass.txt  water_ala_nb14.txt  water_ala_residue.txt  water_ala_velocity.txt
tools/: dat2nc.py  input2sponge.py  maskgen.py  nc2rst7.py
tools/molecule_wrap/: molecule_wrap.cpp
tools/sponge_vmd/: README.md  pkgIndex.tcl  sponge.tcl
unfinished/: known_problem.txt
unfinished/SITS/: README.html  README.md  SITS.cu  SITS.cuh  sits.smf
unfinished/quantum/: bdf.py  g09.py  pyscf.py  quantum.cu  quantum.cuh  quantum.smf
